<resources>
    <string name="app_name">Productivity assistant</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="log_out">Log out</string>
    <string name="pomodoro_timer">Pomodoro timer</string>
    <string name="skip">Skip</string>
    <string name="name">Name</string>
    <string name="start">Start</string>
    <string name="twenty_five">25:00</string>
    <string name="reset">Reset</string>
    <string name="add">Add</string>
    <string name="priority">Priority</string>
    <string name="sign_in">Sign In</string>
    <string name="add_task_button">Add task button</string>
    <string name="tasks">Tasks</string>
    <string name="work">Work</string>
    <string name="five_minutes">05:00</string>
    <string name="break_time">Break</string>
    <string name="delete">Delete</string>
    <string name="delete_all">Delete All</string>
    <string name="streak">Streak</string>
    <string name="enter_message">Enter message</string>
    <string name="bot_message">Bot Message</string>
    <string name="chat_bot">Chat bot</string>
    <string name="no_of_pomodoros_25m">No. Of Pomodoros(25m)</string>
    <string name="time_left">Time left</string>
    <string name="settings">Settings</string>
    <string name="pomodoro_definition">The Pomodoro Technique is a time management method. It uses a timer to break down work into intervals, traditionally 25 minutes in length, separated by short breaks. Each interval is known as a <b>pomodoro</b>.</string>
    <string name="typing">Typing...</string>
    <string name="matrix_definition">The Eisenhower Matrix is a productivity, prioritization, and time-management framework designed to help you prioritize a list of tasks or agenda items by first categorizing those items according to their urgency and importance.</string>
    <string name="logo">logo</string>
    <string name="enter_your_message">Enter your message</string>
</resources>