<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.AddEditTaskActivity">


    <androidx.cardview.widget.CardView
        android:id="@+id/botCard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_margin="5dp"
        android:elevation="8dp"
        app:cardCornerRadius="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/botImage"
                android:layout_width="38dp"
                android:layout_height="38dp"
                app:srcCompat="@drawable/ic_chatbot"
                android:layout_margin="10dp"/>

            <TextView
                android:id="@+id/tvBot"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:padding="3dp"
                android:text="@string/typing"
                android:textColor="@color/black" />


        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <EditText
        android:id="@+id/edName"
        android:layout_width="225dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        android:autofillHints="@string/name"
        android:ems="10"
        android:hint="@string/name"
        android:inputType="text"
        android:layout_gravity="center"/>


    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginStart="95dp"
        android:layout_marginTop="44dp"
        android:text="@string/priority" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="46dp">

        <Spinner
            android:id="@+id/prioritySpinner"
            android:layout_width="179dp"
            android:layout_height="34dp"
            android:layout_marginStart="92dp"
            android:layout_marginTop="4dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imgInfoPrio"
            android:layout_width="34dp"
            android:layout_height="38dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.157"
            app:layout_constraintStart_toEndOf="@+id/prioritySpinner"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@android:drawable/ic_dialog_info" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="46dp"
        android:layout_marginTop="20dp">

        <CheckBox
            android:id="@+id/cbHasTimer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="Use timer"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.423"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <ImageView
            android:id="@+id/imgInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.065"
            app:layout_constraintStart_toEndOf="@+id/cbHasTimer"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@android:drawable/ic_dialog_info" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="46dp"
        android:layout_marginTop="20dp">


        <EditText
            android:id="@+id/edNoOfPomodoros"
            android:layout_width="210dp"
            android:layout_height="45dp"
            android:ems="10"
            android:hint="@string/no_of_pomodoros_25m"
            android:inputType="number"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0" />

        <!--        <ImageView-->
        <!--            android:id="@+id/imgInfo"-->
        <!--            android:layout_width="wrap_content"-->
        <!--            android:layout_height="wrap_content"-->
        <!--            app:layout_constraintBottom_toBottomOf="parent"-->
        <!--            app:layout_constraintEnd_toEndOf="parent"-->
        <!--            app:layout_constraintHorizontal_bias="0.207"-->
        <!--            app:layout_constraintStart_toEndOf="@id/edNoOfPomodoros"-->
        <!--            app:layout_constraintTop_toTopOf="parent"-->
        <!--            app:srcCompat="@android:drawable/ic_dialog_info" />-->


    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/btnAddTask"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="46dp"
        android:layout_gravity="center"
        android:text="@string/add" />


</LinearLayout>